Initial setup - express app generator

--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
   "name": "ponton-node",
-  "version": "1.0.0",
-  "description": "Ponton - private communication app",
-  "main": "app.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/korac/Ponton.git"
-  },
-  "keywords": [
-    "Ponton",
-    "chat",
-    "app"
-  ],
-  "author": "Kristijan Korać",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/korac/Ponton/issues"
-  },
-  "homepage": "https://github.com/korac/Ponton#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "morgan": "~1.8.1",
+    "pug": "~2.0.0-beta11",
+    "serve-favicon": "~2.4.2"
   }
 }
