--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
     "pug": "~2.0.0-beta11",
