--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-node": "^0.1.0",
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
