--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.3",
     "express-toastr": "^2.0.2",
+    "express-validator": "^3.2.1",
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
