--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta11",
     "sequelize": "^4.2.1",
     "sequelize-cli": "^2.7.0",
