--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pug": "~2.0.0-beta11",
     "sequelize": "^4.2.1",
     "sequelize-cli": "^2.7.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "socket.io": "^2.0.3"
   }
 }
